infrastructure/workloads/overlays/payu-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payu
  labels:
    app.kubernetes.io/part-of: payu
    environment: prod
    payu.fajjjar.my.id/ingress: shared
